vercre-issuer/src/snapshots/credential:identifier:state.snap
---
source: vercre-issuer/src/credential.rs
assertion_line: 460
expression: state
---
expires_at: "[expires_at]"
subject_id: normal_user
stage:
  validated:
    access_token: ABCDEF
    credentials:
      PHLEmployeeID: EmployeeID_JWT
    c_nonce: "[c_nonce]"
    c_nonce_expires_at: "[c_nonce_expires_at]"
