vercre-issuer/src/snapshots/credential:identifier:vc.snap
---
source: vercre-issuer/src/credential.rs
assertion_line: 491
expression: vc
---
"@context":
  - "https://www.w3.org/2018/credentials/v1"
  - "http://vercre.io/credentials/v1"
id: "http://vercre.io/credentials/EmployeeIDCredential"
type:
  - VerifiableCredential
  - EmployeeIDCredential
issuer: "http://vercre.io"
issuanceDate: "[issuanceDate]"
credentialSubject:
  address:
    locality: Wellington
    street_address: 123 Fake St
  email: normal.user@example.com
  family_name: Person
  given_name: Normal
  id: "did:key:z6Mkj8Jr1rg3YjVWWhg7ahEYJibqhjBgZt1pDCbT4Lv7D4HX"
