vercre-issuer/src/snapshots/credential:iso_mdl:response.snap
---
source: vercre-issuer/src/credential.rs
assertion_line: 648
expression: "&response"
---
credential: "[credential]"
c_nonce: "[c_nonce]"
c_nonce_expires_in: 599
notification_id: "[notification_id]"
