vercre-issuer/src/snapshots/credential:iso_mdl:state.snap
---
source: vercre-issuer/src/credential.rs
assertion_line: 672
expression: state
---
subject_id: normal_user
stage:
  validated:
    access_token: ABCDEF
    c_nonce: "[c_nonce]"
    c_nonce_expires_at: "[c_nonce_expires_at]"
    credentials:
      DriverLicence:
        credential_identifier: DriverLicence
        credential_configuration_id: org.iso.18013.5.1.mDL
expires_at: "[expires_at]"
