vercre-issuer/src/snapshots/credential:iso_mdl:vc.snap
---
source: vercre-issuer/src/credential.rs
assertion_line: 664
expression: vc
---
"@context":
  - "https://www.w3.org/2018/credentials/v1"
  - "http://vercre.io/credentials/v1"
id: "http://vercre.io/credentials/org.iso.18013.5.1.mDL"
type:
  - VerifiableCredential
  - org.iso.18013.5.1.mDL
issuer: "http://vercre.io"
issuanceDate: "[issuanceDate]"
credentialSubject:
  email: normal.user@example.com
  family_name: Person
  given_name: Normal
  id: "did:key:z6Mkj8Jr1rg3YjVWWhg7ahEYJibqhjBgZt1pDCbT4Lv7D4HX"
