vercre-issuer/src/snapshots/deferred:deferred_ok:response.snap
---
source: vercre-issuer/src/deferred.rs
assertion_line: 148
expression: "&response"
---
credential: "[credential]"
c_nonce: "[c_nonce]"
c_nonce_expires_in: 599
notification_id: "[notification_id]"
