vercre-issuer/src/snapshots/deferred:deferred_ok:state.snap
---
source: vercre-issuer/src/deferred.rs
assertion_line: 175
expression: state
---
expires_at: "[expires_at]"
subject_id: normal_user
stage:
  validated:
    access_token: "[access_token]"
    credentials:
      PHLEmployeeID: EmployeeID_JWT
    c_nonce: "[c_nonce]"
    c_nonce_expires_at: "[c_nonce_expires_at]"
