vercre-issuer/src/snapshots/deferred:deferred_ok:vc.snap
---
source: vercre-issuer/src/deferred.rs
assertion_line: 169
expression: vc
---
"@context":
  - "https://www.w3.org/2018/credentials/v1"
  - "http://vercre.io/credentials/v1"
id: "http://vercre.io/credentials/EmployeeIDCredential"
type:
  - VerifiableCredential
  - EmployeeIDCredential
issuer: "http://vercre.io"
issuanceDate: "[issuanceDate]"
credentialSubject:
  email: normal.user@example.com
  family_name: Person
  given_name: Normal
  id: "did:key:z6Mkj8Jr1rg3YjVWWhg7ahEYJibqhjBgZt1pDCbT4Lv7D4HX"
  proficiency: "3"
