vercre-issuer/src/snapshots/metadata:metadata_ok:response.snap
---
source: vercre-issuer/src/metadata.rs
assertion_line: 79
expression: response
---
credential_issuer: "http://vercre.io"
credential_endpoint: "http://vercre.io/credential"
deferred_credential_endpoint: "http://vercre.io/deferred"
display:
  name: Vercre
  locale: en-NZ
credential_configurations_supported:
  Developer_JWT:
    format: jwt_vc_json
    credential_definition:
      type:
        - VerifiableCredential
        - DeveloperCredential
      credentialSubject:
        family_name:
          value_type: string
          display:
            - name: Family name
              locale: en-NZ
        given_name:
          value_type: string
          display:
            - name: Given name
              locale: en-NZ
        proficiency:
          mandatory: true
          value_type: number
          display:
            - name: Proficiency
              locale: en-NZ
    scope: DeveloperCredential
    cryptographic_binding_methods_supported:
      - "did:key"
      - "did:web"
    credential_signing_alg_values_supported:
      - ES256K
      - EdDSA
    proof_types_supported:
      jwt:
        proof_signing_alg_values_supported:
          - ES256K
          - EdDSA
    display:
      - name: Developer
        locale: en-NZ
        logo:
          uri: "https://vercre.github.io/assets/developer.png"
          alt_text: Vercre Logo
        description: Vercre certified developer credential
        background_color: "#010100"
        background_image:
          uri: "https://vercre.github.io/assets/vercre-background.png"
          alt_text: Vercre Background
        text_color: "#ffffff"
  EmployeeID_JWT:
    format: jwt_vc_json
    credential_definition:
      type:
        - VerifiableCredential
        - EmployeeIDCredential
      credentialSubject:
        address:
          country:
            value_type: string
            display:
              - name: Address
                locale: en-NZ
          locality:
            value_type: string
            display:
              - name: Address
                locale: en-NZ
          region:
            value_type: string
            display:
              - name: Address
                locale: en-NZ
          street_address:
            value_type: string
            display:
              - name: Address
                locale: en-NZ
        email:
          mandatory: true
          value_type: string
          display:
            - name: Email
              locale: en-NZ
        family_name:
          mandatory: true
          value_type: string
          display:
            - name: Family name
              locale: en-NZ
        given_name:
          mandatory: true
          value_type: string
          display:
            - name: Given name
              locale: en-NZ
    scope: EmployeeIDCredential
    cryptographic_binding_methods_supported:
      - "did:key"
      - "did:web"
    credential_signing_alg_values_supported:
      - ES256K
      - EdDSA
    proof_types_supported:
      jwt:
        proof_signing_alg_values_supported:
          - ES256K
          - EdDSA
    display:
      - name: Employee ID
        locale: en-NZ
        logo:
          uri: "https://vercre.github.io/assets/employee.png"
          alt_text: Vercre Logo
        description: Vercre employee ID credential
        background_color: "#323ed2"
        background_image:
          uri: "https://vercre.github.io/assets/vercre-background.png"
          alt_text: Vercre Background
        text_color: "#ffffff"
authorization_server:
  issuer: "http://vercre.io"
  authorization_endpoint: /auth
  token_endpoint: /token
  scopes_supported:
    - openid
  response_types_supported:
    - code
  response_modes_supported:
    - query
  grant_types_supported:
    - authorization_code
    - "urn:ietf:params:oauth:grant-type:pre-authorized_code"
  code_challenge_methods_supported:
    - S256
  pre-authorized_grant_anonymous_access_supported: true
