vercre-issuer/src/snapshots/oauth_server:metadata_ok:response.snap
---
source: vercre-issuer/src/oauth_server.rs
assertion_line: 77
expression: response
---
authorization_server:
  issuer: "http://vercre.io"
  authorization_endpoint: /auth
  token_endpoint: /token
  scopes_supported:
    - openid
    - credential
  response_types_supported:
    - code
  response_modes_supported:
    - query
  grant_types_supported:
    - authorization_code
    - "urn:ietf:params:oauth:grant-type:pre-authorized_code"
  code_challenge_methods_supported:
    - S256
  pre-authorized_grant_anonymous_access_supported: true
